--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -21,6 +21,10 @@ jobs:
         run: |
           pip install -r requirements.txt
 
+      - name: Install flake8
+        run: |
+          python -m pip install flake8
+          
       - name: Check code style
         run: flake8 .
 
