--- a/.github/workflows/documentation.yaml
+++ b/.github/workflows/documentation.yaml
@@ -14,7 +14,11 @@ jobs:
         with:
           python-version: '3.10.11'
           cache: 'pip'
-      - run: python -m pip install mkdocs==1.4.2 mkdocstrings==0.21.2 "mkdocstrings[python]>=0.18"
+      - run: python -m pip install mkdocs mkdocstrings "mkdocstrings[python]"
+
+      - name: Install dependencies
+        run: |
+          pip install -r requirements.txt
 
       # Deploy docs
       - name: Deploy documentation
