--- a/.github/workflows/documentation.yaml
+++ b/.github/workflows/documentation.yaml
@@ -20,6 +20,14 @@ jobs:
         run: |
           pip install -r requirements.txt
 
+      - name: Deploy to GitHub Pages
+        run: |
+          git config --global user.email "jerf8010@gmail.com"
+          git config --global user.name "jerf8010"
+          git add .
+          git commit -m "Deploy to GitHub Pages"
+          git push origin gh-pages --force
+
       # Deploy docs
       - name: Deploy documentation
         run: mkdocs gh-deploy --force
