--- a/.github/workflows/documentation.yaml
+++ b/.github/workflows/documentation.yaml
@@ -14,7 +14,7 @@ jobs:
         with:
           python-version: '3.10.11'
           cache: 'pip'
-      - run: python -m pip install mkdocs mkdocstrings "mkdocstrings[python]"
+      - run: python -m pip install mkdocs==1.1.2 "mkdocstrings[python]"
 
       - name: Install dependencies
         run: |
