--- a/.github/workflows/documentation.yaml
+++ b/.github/workflows/documentation.yaml
@@ -20,6 +20,12 @@ jobs:
         run: |
           pip install -r requirements.txt
 
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./build
+          
       # Deploy docs
       - name: Deploy documentation
         run: mkdocs gh-deploy --force
